docs/02_modules/LED-01/blueprint/v1.2/README.md
---
document_id: LED-01-BP-v1.2
title: LED-01 Blueprint Pack — Ledger / Settlement / Safeguarding
version: v1.2
document_status: DRAFT
implementation_status: N/A
module: LED-01
control: Ledger, settlement, safeguarding
owner: Unassigned
effective_date: UNKNOWN
last_reviewed: UNKNOWN
supersedes: none (uncertified)
baseline_commit: 780e116
---

# LED-01 Ledger / Settlement / Safeguarding Blueprint Pack v1.2

## Module

LED-01 Ledger / Settlement / Safeguarding

## Purpose

LED-01 owns the immutable double-entry ledger, client-asset/client-money safeguarding invariant, settlement state controls, prefunded holds, and reconciliation evidence for the AIX Money Broking + PSO platform.

It is the fund-flow control core. It must prevent AIX principal exposure, unfunded execution, unsupported balance credit, direct balance edits, settlement before controls clear, and any breach of full backing.

It covers:

1. Immutable double-entry ledger.
2. Ledger account model.
3. Client asset / client money sub-ledgers.
4. Prefunded holds and reserved balances.
5. Available / held / pending / settled balance views.
6. Deposit pending / confirmed / credited controls.
7. Withdrawal / payout settlement controls.
8. WLT-01 destination decision consumption.
9. AML-01 pre-transaction gate consumption.
10. DvP / settlement sequencing.
11. LP execution settlement handoff support.
12. No AIX inventory / no principal exposure rules.
13. Full-backing safeguarding invariant.
14. Internal transfer and adjustment controls.
15. Immutable journal posting.
16. Idempotent posting.
17. Ledger close / freeze / cut-off.
18. Daily reconciliation and exception handling.
19. Safeguarding evidence and proof-of-reserves style checks.
20. Audit and incident controls.

## Accepted Dependencies

- FND-01 Platform Foundation accepted v1.2.
- IAM-01 Authentication / MFA / Session accepted v1.2.
- IAM-02 RBAC / Permission Guard / SoD accepted v1.2.
- SEC-01 Audit Log / Security Monitoring accepted v1.2.
- CFG-01 Feature Flag / Licence Lock accepted v1.2.
- CLT-01 Client Onboarding / Client Profile accepted v1.2.
- KYC-01 KYC / KYB Verification accepted v1.2.
- AML-01 Sanctions / PEP / Adverse Media / Travel Rule Screening accepted v1.2.
- WLT-01 Wallet Screening / Payout Destination Whitelist accepted v1.2.

## Pack Contents

1. `01_Module_Blueprint.md`
2. `02_Workflow.md`
3. `03_Diagrams.md`
4. `04_API_Specification.md`
5. `05_Database_Design.md`
6. `06_State_Machine.md`
7. `07_Permission_Rules.md`
8. `08_Audit_Log_Events.md`
9. `09_Error_Handling.md`
10. `10_Test_Cases.md`
11. `11_Claude_Prompt.md`
12. `12_Risk_And_Control_Map.md`
13. `13_Reconciliation_Design.md`
14. `14_Go_Live_Checklist.md`
15. `15_Regulatory_Mapping.md`
16. `16_Data_Classification.md`

Base documents:
- 00_Licence_Scope_And_Feature_Lock_v1.3.md
- 01_Project_Charter_v1.3.md
- 02_Software_Requirement_Specification_v1.2.md
- 03_Master_Module_Index_v1.2.md
- 04_Role_And_Permission_Matrix_v1.2.md
- 05_Master_Workflow_Map_v1.2.md
- 06_Master_System_Rules_v1.2.md
- 07_Master_Data_Flow_v1.2.md
- 08_Master_Technical_Architecture_v1.2.md
- 09_Master_Security_Architecture_v1.2.md
- 10_Master_Testing_Strategy_v1.2.md
- 11_Master_Deployment_Strategy_v1.2.md
- FND-01_Platform_Foundation_Blueprint_Pack_v1.2
- IAM-01_Authentication_MFA_Session_Blueprint_Pack_v1.2
- IAM-02_RBAC_Permission_Guard_SoD_Blueprint_Pack_v1.2
- SEC-01_Audit_Log_Security_Monitoring_Blueprint_Pack_v1.2
- CFG-01_Feature_Flag_Licence_Lock_Blueprint_Pack_v1.2
- CLT-01_Client_Onboarding_Client_Profile_Blueprint_Pack_v1.2
- KYC-01_KYC_KYB_Verification_Blueprint_Pack_v1.2
- AML-01_Sanctions_PEP_Adverse_Media_Travel_Rule_Blueprint_Pack_v1.2
- WLT-01_Wallet_Screening_Payout_Destination_Whitelist_Blueprint_Pack_v1.2


## v1.1 Review Patch Summary

This v1.1 patch closes the Claude Opus initial review gaps:

1. Atomic real-time available balance and conditional reservation added.
2. Balance snapshots are explicitly reconciliation artefacts only, never reservation source.
3. Per-account serialisation / row-lock or optimistic version guard added.
4. Hold creation is atomic compare-and-set against live balance.
5. Two-leg linked DvP settlement model added.
6. Partial-settlement states and compensating unwind to client/suspense position added.
7. Preventive safeguarding added:
   - free vs encumbered safeguarded backing.
   - credit consumes confirmed unencumbered backing atomically.
   - outbound settlement encumbers backing.
   - invariant checked per movement.
8. FX/cross-asset conversion event added as linked A-out/B-in leg pair.
9. Rounding/residual account policy added:
   - bounded.
   - monitored.
   - client/cost-attributed by policy.
   - never AIX principal.
10. AIX net asset position zero enforcement added.
11. Journal hash-chain / tamper-evidence added.
12. Independent chain-verification job and periodic external anchoring added.
13. Hold pinned while settlement in-flight added.
14. Post-credit clawback for chain reorg / fiat recall added.
15. Idempotency conflict behaviour clarified.
16. Intraday/per-movement safeguarding cadence added.
17. Operational/clearing/suspense/residual account bounds added.
18. Fee and settlement atomicity / compensated saga added.
19. New tests LED1-TC-041 to LED1-TC-072.

## v1.2 Final Rollup Summary

LED-01 v1.2 is a non-substantive final rollup after Claude Opus final verification.

Status:
- All 5 critical gaps resolved in v1.1.
- All 6 recommended corrections resolved in v1.1.
- v1.2 fixes cosmetic nits only.
- LED-01 is accepted / final verified.

Cosmetic fixes:
1. Updated `01_Module_Blueprint.md` Document Control pack version cell to v1.2.
2. Added deposit state diagram transition for credited-to-clawback visual clarity.

Control change from v1.1:
- None.

Money-tier status:
- WLT-01 accepted v1.2.
- LED-01 accepted v1.2.

Next module:
- TRD-01 Quote / Trade / LP Execution.
